add the post about cloud computing

--- a/config.yml
+++ b/config.yml
@@ -151,18 +151,9 @@ permalinks: null
 #-------------------------------------------------------------------------------
 # LOCALE & LANGUAGE
 #-------------------------------------------------------------------------------
-languages:
-  en:
-    contentDir: content/en
-    languageName: English
-    weight: 10
-  vi:
-    contentDir: content/
-    languageName: Vietnames
-    weight: 20
 
 # Missing translations will default to this content language
-defaultContentLanguage: vi
+defaultContentLanguage: en-us
 
 # Renders the default content language in subdir, e.g. /en/.
 # The root directory / will redirect to /en/
